# fesenjoon

./: .dockerignore  .env  .env.dev  .gitignore  .mypy.ini  Makefile  README.md  README.rst  example.make  exclude.lst  preferences.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml  publish.yml  pylint.yml
examples/: cli.bash  download.py  upload.py
fesenjoon/: Drive.py  cli.py
scripts/.githooks/: pre-commit
src/: Drive.py  app.py  mime.py
