# https://peps.python.org/pep-0621/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [
  {name = "Mohsen Hariri", email = "mhariri68@gmail.com"},
]
description = "A simple multiprocessing google drive api"
dynamic = ["version"]
keywords = ["google drive", "google cloud", "backup"]
license = {file = "LICENSE"}
name = "mh-gdrive"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  "google-api-python-client==2.60.0",
  "google-auth-oauthlib==0.5.2",
]

[project.optional-dependencies]
dev = [
    "black>=18.3",
]

[tool.setuptools.packages.find]
where = ["src"] # ["."] by default
# include = ["mypackage*"]  # ["*"] by default
exclude = ["download", ".credentials", ".token"] # empty by default        
namespaces = true # true by default

[tool.isort]
profile = "black"
